--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,4 @@
+# .github/workflows/deploy.yml
 name: Deploy Vite App to GitHub Pages
 
 on:
@@ -32,7 +33,7 @@ jobs:
       - name: Build the app
         run: npm run build
 
-      - name: Upload artifact
+      - name: Upload build output to GitHub Pages
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./dist
