--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lovable-tagger": "^1.1.8",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "octokit": "^5.0.3",
     "postgres": "^3.4.7",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
