--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "git": {
     "deploymentEnabled": {
-      "main": false
+      "dev-main": false
     }
   }
 }
