--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ VITE_GITHUB_TOKEN="github_pat_11ALKXGKA0lpjzN8lCK4Ye_4uS1goJPHjmtPBxauwMao862ymB
 VITE_GITHUB_REPO="medcart-request-hub"
 VITE_GITHUB_OWNER="akshjain10"
 VITE_PATH="https://github.com/akshjain10/medcart-request-hub/tree/main/public/images/products"
-FORM_ACCESS_KEY="fc40508f-b383-4f6f-80e2-49112db7e8d7"
+VITE_FORM_ACCESS_KEY="fc40508f-b383-4f6f-80e2-49112db7e8d7"
